<resources>
    <string name="app_name">脉脉</string>
    <string name="app_description">脉脉,让距离更近一步</string>
    <string name="experience">立即体验</string>
    <string name="user_name">用户名</string>
    <string name="user_password">请输入密码</string>
    <string name="user_login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register_acc">注册账号</string>
    <string name="other_login_mode">其他账号登录</string>
    <string name="title_activity_login_test">LoginTestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
