<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".view.activities.LoginActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/x48"
        android:layout_height="@dimen/x48"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257"
        app:srcCompat="@drawable/logo"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="@dimen/x270"
        android:layout_height="@dimen/x45"
        android:layout_marginTop="@dimen/x40"
        style="@style/EtStyle"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        style="@style/EtStyle"
        android:id="@+id/et_password"
        android:layout_width="@dimen/x270"
        android:layout_height="@dimen/x45"
        android:layout_marginTop="@dimen/x1"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/x270"
        android:layout_height="@dimen/x45"
        android:layout_marginTop="@dimen/x16"
        android:background="@drawable/selector_login_btn"
        android:text="@string/user_login"
        android:textColor="@color/white"
        android:textSize="@dimen/x13"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:text="@string/forget_password"
        android:textColor="@color/sky_blue_forget_password"
        android:textSize="@dimen/x10"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/et_register_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:text="@string/register_acc"
        android:textColor="@color/light_blue_register_acc"
        android:textSize="@dimen/x10"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <View
        android:id="@+id/left_line"
        android:layout_width="@dimen/x90"
        android:layout_height="@dimen/x1"
        android:background="@color/deep_blue_line"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/tv_other_login_mode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_forget_password"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:textSize="@dimen/x10"
        android:textColor="@color/deep_blue_other_login_mode"
        android:id="@+id/tv_other_login_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_login_mode"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x30"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/x40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:background="@color/deep_blue_line"
        android:id="@+id/textView6"
        android:layout_width="@dimen/x90"
        android:layout_height="@dimen/x1"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/et_register_acc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_other_login_mode"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>